--- a/docs/deployment_guide/partner_editable/licenses.adoc
+++ b/docs/deployment_guide/partner_editable/licenses.adoc
@@ -1,3 +1,5 @@
 // Include details about any licenses and how to sign up. Provide links as appropriate.
 
 There is no cost to use this Partner Solution, but you will be billed for any AWS services or resources that this Partner Solution deploys. For more information, refer to the https://fwd.aws/rA69w?[AWS Partner Solution General Information Guide^].
+
+{partner-product-short-name} is a free, open-source solution that operates under an MIT license. For details, see https://github.com/superwerker/superwerker/blob/main/LICENSE.md[MIT License^] in the {partner-product-short-name} GitHub repository. 
