--- a/docs/deployment_guide/partner_editable/overview.adoc
+++ b/docs/deployment_guide/partner_editable/overview.adoc
@@ -1,10 +1,7 @@
-This guide covers the information you need to deploy the {partner-product-name} Partner Solution in the AWS Cloud.
+This guide provides instructions for deploying the {partner-product-short-name} Partner Solution reference architecture on the AWS Cloud.
 
-// Fill in the info in <angle brackets> for use on the landing page only: 
-This Amazon Web Services (AWS) Partner Solution deploys [<product name>](<partner's marketing product page>) in the AWS Cloud so that <purpose>. This solution is for <target users> who want to <do what> so that <why>. For more information, refer to the [<product name> documentation](<URL>).
+This Partner Solution is for users who want to quickly get started with the AWS Cloud without needing to spend a lot of time making decisions and tracking down information. 
 
-// Deploying this solution does not guarantee an organization’s compliance with any laws, certifications, policies, or other regulations. [Uncomment this statement only for solutions that relate to compliance. We'll add the corresponding reference part to the landing page and get legal approval before publishing.]
+link:https://superwerker.cloud[{partner-product-short-name}] is a free, open-source solution that lets you quickly set up an AWS Cloud environment without the need for a consultant or extensive research on AWS services. {partner-product-short-name} is built by AWS Advanced Partners who have decades of experience setting up and automating Cloud environments using best practices that ensure maximized efficiency, agility, and low maintenance. For information about the AWS Partners, see link:https://kreuzwerker.de[kreuzwerker GmbH] and link:https://superluminar.io[superluminar GmbH].
 
-// For advanced information about the product, troubleshooting, or additional functionality, refer to the https://{partner-solution-github-org}.github.io/{partner-solution-project-name}/operational/index.html[Operational Guide^].
-
-// For information about using this Partner Solution for migrations, refer to the https://{partner-solution-github-org}.github.io/{partner-solution-project-name}/migration/index.html[Migration Guide^].
+All sizes of companies can benefit from using {partner-product-short-name}. Start-up companies and small-to-medium companies can especially benefit in cases where time-to-market and financial aspects are concerns. Regardless of company size, {partner-product-short-name} lets you focus on your core business without spending time on setting up and maintaining your AWS Cloud environment.
