--- a/docs/deployment_guide/partner_editable/troubleshooting.adoc
+++ b/docs/deployment_guide/partner_editable/troubleshooting.adoc
@@ -4,3 +4,8 @@ For troubleshooting common Partner Solution issues, refer to the https://fwd.aws
 
 // == Resources
 // Uncomment section and add links to any external resources that are specified by the partner.
+
+== Keep up to date with development team
+
+{partner-product-name} is a living project. The development team documents their link:https://github.com/superwerker/superwerker/tree/main/docs/adrs[architectural decisions (ADR) in the Github repository]
+The ADRs and the link:https://github.com/superwerker/superwerker/issues[Github issues] are the best place to follow future development directions on a high level without looking at the actual source code.
